--- a/index.html
+++ b/index.html
@@ -8,50 +8,19 @@
 </head>
 <body>
   <div id="container">
-    <div class="sns">
-      <a href="https://www.instagram.com/si_w08/" target="_blank"><img src="image/instarlogo.jpeg" id="instarlogo"></a>
-    </div>
     <div id="hello">
-      <h1>Log 동아리 과제</h1>
-      <h2>1402 김시우</h2>
+      <h2>1402 김시우의 자기소개</h2>
     </div>
-    <div id="textBox">
-      <div id="box1">
-        <div id="box1Title">
-          <h2>지원 동기</h2>
-          <p><br>저는 제 첫 고등학교인 이곳 대덕 소프트웨어 마이스터고에입학 한 후에 전공동아리에 <br>잘 들어가야 하는데 
-            어떤 곳을 들어가면 <br>좋을지 고민과 걱정을 정말 많이 했습니다. 
-            <br>그러던 중 저는 전공동아리 설명회에서 log라는 동아리의 설명을 들었습니다. 
-            하지만 <br>그때 당시엔 아직 명확한 전공을 선택하지 <br>않았기에 많은 생각이 들지는 않았습니다. 
-            <br>이후에 저는 다양한 것들을 시도해본결과 <br>저는 저의 전공을 프론트엔드 쪽으로 <br>정하겠다는 생각이 들었고 
-            마침 프론트엔드를 배울 수 있는 동아리 중 웹/앱 동아리인 log라는 동아리가 떠올랐습니다. 전공동아리 log에서 프론트엔드 개발 분야를 공부하고, 
-            실력을 쌓아서 성장하고 싶다는 생각에 log에 지원하게 되었습니다. 
-            정말 개인적인 생각으로는 log가 새로 창설된 동아리라고 <br>들어서 제가 이 전공 동아리에 창립멤버가 <br>되고 싶기도 했습니다</p>
-          </div>
-      </div>
-      <div id="box2">
-        <div id="box2Title">
-          <h2>프론트엔드로 지원한 이유</h2>
-          <p><br>동아리에 들어가고 싶다고 생각한 후, log에서 뽑는 전공들을 알아보고 그중에서 하나를 정해야겠다고 생각했습니다.
-            입학 한 후 <br>1,2주차에 선배님들이 하나씩 멘토링 해주신 덕분에 모든 전공을 체험 해 보았습니다. 
-            AOS는 체험해보니 저에게 맞지는 않았습니다. 남은건 백엔드와 프론트엔드 였습니다. 
-            <br>백엔드와 프론트엔드 중 어떤 전공을 해야할지 고민하던 중 웹 프로그래밍 시간에 html수업을 듣고 마음이 바뀌었습니다. 
-            제가 프로그래밍한 코드가 바로 화면에 나오는 것에 큰 재미를 느꼈습니다.
-            수업을 듣고 난 후 저는 프론트엔드를 해야겠다고 결정 했습니다. 
-            <br>아직 많은 것을 배우지는 못해서 실력이 <br>좋거나 하지는 않지만,
-            log에 들어가 열심히 배워서 프론트 엔드로서의 역량을 키우고,
-            <br>프로젝트에서 자신의 역할을 충분히 할 수 <br>있는 프론트엔드 개발자가 되고 싶기 때문에 프론트엔드로 지원하게 되었습니다.</p>
-          </div>
-      </div>
-      <div id="box3">
-        <div id="box3Title">
-          <h2>동아리에 들어가서 <br>하고싶은 일</h2>
-          <p><br>log에 들어가서 가장 하고 싶은 일은 css와 자바스크립트를 배우는 것 입니다. 
-            제 기초가 아직 많이 부족 한 것 같습니다. 그래서 log에 들어가 선배님들께 물어보고 조언을 구하면서 css의 grid나 레이아웃, 
-            반응형, 적응형 웹이나 자바스크립트의 DOM처럼 제가 이해하지 못하거나 아직 모르는 부분들을 배우고 싶습니다.
-            log에 들어가 실력을 키우고, 갈고 닦으며 프론트엔드 개발자로서의 역량을 <br>향상시켜 제 역할을 다 할 수 있는 프론트엔드 개발자가 되고 싶습니다.</p>
-          </div>
-      </div>
+    <div>
+      <img src="https://gdimg.gmarket.co.kr/2881134848/still/400?ver=1680622657" id="bluePig">
+    </div>
+    <div id="snsLogos">
+      <a href="https://www.instagram.com/si_w08/"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384063.png" id="instagram"></a>
+      <a href="https://www.facebook.com/profile.php?id=100070527406321"><img src="https://img.etnews.com/photonews/1807/1094645_20180725105515_059_0001.jpg" id="facebook"></a>
+      <a href="https://github.com/kswblue"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYi4jht7hAitS-FJZFNT__83sElQFolpttY7z_NIrv7w&s" id="github"></a>
+    </div>
+    <div>
+      <p>이미지를 누르시면 제 <u>sns</u> 로 이동합니다!</p>
     </div>
   </div>
 </body>
